# fire_ws

./: README.md  fire_rescue.world  rescue.world
src/: starter.yaml
src/detection_msgs/: CMakeLists.txt  package.xml
src/fire_spread/: frames_2025-06-05_16.03.58.gv  package.xml  setup.cfg  setup.py
src/fire_spread/fire_spread/: bottle_detector.py  fire_spread_node.py  navigator.py  spawn_pillar_fire.py  victim_rescue_node.py
src/fire_spread/launch/: fire_mission.launch.py  turtlebot3_house.launch.py
src/your_detection_msgs/: CMakeLists.txt  package.xml
src/your_detection_msgs/msg/: DetectedObject.msg  DetectedObjectArray.msg
